styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.main-header-flipkart {
    height: 56px;
    background-color: #2370f4;
}

/* 
.explore-plus-logo img{
    height: 60%;
    position: relative;
    top: 10px;
}

.main-header-container {
    max-width: 1000px;
    margin-left: auto; 
    margin-right: auto;
}


.search-product {
    height: 80%;
    display: inline-block;
    margin-left: 10px;
    padding: 10px 0px;
    width: 400px;
}

.main-header-container input {
    width: 100%;
    padding: 10px 10px;
}

.header-seller {
    display: inline-block;
} */

/* Old Styles replaced */

.main-header-container {
    max-width: 1000px;
    margin: 0 auto;
}

.main-header-flex-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 95%;
}

.explore-plus-logo-wrapper img {
    height: 35px;
    align-self: flex-end;
}

.search-product-wrapper {
    width: 400px;
    position: relative;
    left: -20px;
}

.search-product-wrapper input{
    width: 100%;
    height: 35px;
    padding: 10px;
}

.header-login-btn-wrapper .header-login-btn {
    color: #2370f4;
    padding: 5px 30px;
    font-weight: bold;
    font-size: 16px;
    border-radius: 2px;
    border: none;
    background-color: white;
}

.header-become-selller-wrapper h4, .header-become-selller-wrapper a {
    text-decoration: none;
    color: white;
    font-size: 16px;margin-top: 8px;
}

.primary-button {
    position: relative;
    background: transparent;
    border:  none;
    color: white;
    font-size: 16px;
    padding: 0 5px;
}

.secondary-button {
    border: none;
    color: white;
    background-color: transparent;
    margin-top: 4px;
}

.dropdown {
    display: inline-block;
    position: absolute;
}

.dropdown-list {
    border: 1px solid rgb(218, 217, 217);
    position: relative;
    top: 25px;
    left: -100px;
    display: none;
    background-color: white;
    z-index: 11;
}

.header-more .dropdown-list a { 
    text-decoration: none;
    color: black;
    display: block;
    padding: 12px 20px;
    
}

.header-more .dropdown-list a{ 
   border-bottom: 1px solid rgb(218, 217, 217);
}

.dropdown:hover .dropdown-list {
    display: block;
}

.header-cart-wrapper h4{
    margin-left: 10px;   
}

.header-cart-wrapper > *{
    color: white;
    display: inline;
    padding-right: 4px;
    font-size: 16px;
}

/* Top Section Styling */

/* .top-section-container-wrapper {
    max-width: 1200px;
} */

.top-section-container {
    display: flex;
    justify-content: space-around;
    margin: 8px 5px;
    
}

.top-section-container img{
    height: 70px;
}

.top-section-container h4{
    font-size: 14px;
    margin-top: 5px;
}

.top-section-container > *{
    text-align: center;
    padding: 2px 2px;
}


/* Main body container styling */

.main-body {
    background-color: rgb(241, 243, 246);
    border-top: 1px solid rgb(230, 229, 229);
    z-index: -10;
}

.main-body-wrapper {
    margin: 15px 5px;
    
}

.my-carousel-btns-wrapper .my-carousel-btn button{
    margin: 50px 0px;
    background-color: white;
    opacity: 1;
    width: 50px;
}

.my-carousel-btns-wrapper .my-carousel-btn:nth-child(odd)  button{
    border-bottom-right-radius: 5px;
    border-top-right-radius: 5px;
}

.my-carousel-btns-wrapper .my-carousel-btn:nth-child(even)  button{
    border-bottom-left-radius: 5px;
    border-top-left-radius: 5px;
}

/* .my-carosel-btn-prv span.carousel-control-prev-icon {
    color: black;
} */

.my-carousel-btn i{
    color: black;
    font-size: 32px;
}

/* Discount Images */
.discount-img-item img {
    width: 100%;
    cursor: pointer;
    margin: 8px 0px;
}

/* Deals Images */
.deals-images-wrapper {
    display: flex;
    justify-content: space-between;
}

.deals-images-wrapper .deals-img {
    width: 32.5%;
    
}

.deals-images-wrapper .deals-img img {
    width: 100%;
}

